--- a/package.json
+++ b/package.json
@@ -32,6 +32,25 @@
     "**/*.less": "npm run lint:style"
   },
   "dependencies": {
+    "3id-did-provider": "1.1.0",
+    "@3id/connect": "^0.2.0",
+    "@ceramicnetwork/3id-did-resolver": "1.4.0",
+    "@ceramicnetwork/common": "1.3.0",
+    "@ceramicnetwork/http-client": "1.2.0",
+    "@ceramicstudio/idx": "^0.12.1",
+    "@ceramicstudio/idx-tools": "0.11.0",
+    "@ceramicstudio/idx-constants": "^1.0.0",
+    "@ceramicnetwork/stream-tile": "1.2.0",
+    "dids": "^2.4.0",
+    "key-did-resolver": "^1.2.1",
+    "stream-browserify": "^3.0.0",
+    "@emotion/react": "^11.4.0",
+    "@types/merge-images": "1.2.1",
+    "buffer": "^6.0.3",
+    "dataverse-sdk": "./dataverse/sdk",
+    "nft.storage": "^0.3.9",
+    "react-spring": "^9.2.1",
+    "react-use": "^17.2.4",
     "@ant-design/icons": "^4.6.2",
     "@download/blockies": "^1.0.3",
     "@headlessui/react": "^1.3.0",
