--- a/package.json
+++ b/package.json
@@ -34,25 +34,16 @@
   "dependencies": {
     "3id-did-provider": "1.1.0",
     "@3id/connect": "^0.2.0",
+    "@ant-design/icons": "^4.6.2",
     "@ceramicnetwork/3id-did-resolver": "1.4.0",
     "@ceramicnetwork/common": "1.3.0",
     "@ceramicnetwork/http-client": "1.2.0",
-    "@ceramicstudio/idx": "^0.12.1",
-    "@ceramicstudio/idx-tools": "0.11.0",
-    "@ceramicstudio/idx-constants": "^1.0.0",
     "@ceramicnetwork/stream-tile": "1.2.0",
-    "dids": "^2.4.0",
-    "key-did-resolver": "^1.2.1",
-    "stream-browserify": "^3.0.0",
-    "@emotion/react": "^11.4.0",
-    "@types/merge-images": "1.2.1",
-    "buffer": "^6.0.3",
-    "dataverse-sdk": "./dataverse/sdk",
-    "nft.storage": "^0.3.9",
-    "react-spring": "^9.2.1",
-    "react-use": "^17.2.4",
-    "@ant-design/icons": "^4.6.2",
+    "@ceramicstudio/idx": "^0.12.1",
+    "@ceramicstudio/idx-constants": "^1.0.0",
+    "@ceramicstudio/idx-tools": "0.11.0",
     "@download/blockies": "^1.0.3",
+    "@emotion/react": "^11.4.0",
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
     "@reach/skip-nav": "^0.15.0",
@@ -63,22 +54,29 @@
     "@react-stately/overlays": "^3.1.2",
     "@svgr/webpack": "^5.5.0",
     "@tryghost/content-api": "^1.5.10",
+    "@types/merge-images": "1.2.1",
     "@types/qs": "^6.9.6",
     "@types/tryghost__content-api": "^1.3.7",
     "antd": "^4.16.10",
     "autoprefixer": "^10.2.6",
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
+    "buffer": "^6.0.3",
     "classnames": "^2.3.1",
+    "cors": "^2.8.5",
+    "dataverse-sdk": "./dataverse/sdk",
     "dayjs": "^1.10.6",
+    "dids": "^2.4.0",
     "ethers": "^5.4.4",
     "eventemitter3": "^4.0.7",
     "gsap": "^3.7.1",
     "isomorphic-fetch": "^3.0.0",
+    "key-did-resolver": "^1.2.1",
     "merge-images": "^2.0.0",
     "next": "11.x",
     "next-intl": "^1.4.4",
     "next-plugin-antd-less": "^1.3.0",
+    "nft.storage": "^0.3.9",
     "postcss": "^8.3.5",
     "qs": "^6.10.1",
     "react": "17.x",
@@ -89,8 +87,11 @@
     "react-modal": "^3.14.3",
     "react-player": "^2.9.0",
     "react-social-plugins": "^2.1.0",
+    "react-spring": "^9.2.1",
     "react-twitter-widgets": "^1.10.0",
+    "react-use": "^17.2.4",
     "rekv": "^1.2.2",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "^2.2.4",
     "web3-utils": "^1.5.1"
   },
