--- a/package.json
+++ b/package.json
@@ -42,6 +42,13 @@
     "@ceramicstudio/idx": "^0.12.1",
     "@ceramicstudio/idx-constants": "^1.0.0",
     "@ceramicstudio/idx-tools": "0.11.0",
+    "@3id/common": "^0.2.0",
+    "@ceramicnetwork/blockchain-utils-linking": "^1.2.0",
+    "@ceramicnetwork/stream-caip10-link": "^1.1.2",
+    "@stablelib/sha256": "^1.0.0",
+    "caip": "^0.9.2",
+    "uint8arrays": "^2.1.4",
+    "did-resolver": "^3.1.0",
     "@download/blockies": "^1.0.3",
     "@emotion/react": "^11.4.0",
     "@headlessui/react": "^1.3.0",
