--- a/package.json
+++ b/package.json
@@ -32,23 +32,27 @@
     "**/*.less": "npm run lint:style"
   },
   "dependencies": {
-    "3id-did-provider": "1.1.0",
-    "@3id/connect": "^0.2.0",
-    "@ant-design/icons": "^4.6.2",
-    "@ceramicnetwork/3id-did-resolver": "1.4.0",
-    "@ceramicnetwork/common": "1.3.0",
-    "@ceramicnetwork/http-client": "1.2.0",
-    "@ceramicnetwork/stream-tile": "1.2.0",
-    "@ceramicstudio/idx": "^0.12.1",
-    "@ceramicstudio/idx-constants": "^1.0.0",
-    "@ceramicstudio/idx-tools": "0.11.0",
-    "@3id/common": "^0.2.0",
-    "@ceramicnetwork/blockchain-utils-linking": "^1.2.0",
-    "@ceramicnetwork/stream-caip10-link": "^1.1.2",
+    "dids": "^2.4.0",
+    "did-resolver" : "^3.1.2",
+    "@3id/common": "^0.3.0",
     "@stablelib/sha256": "^1.0.0",
     "caip": "^0.9.2",
     "uint8arrays": "^2.1.4",
-    "did-resolver": "^3.1.0",
+    "3id-did-provider": "^1.1.0",
+    "key-did-resolver" : "1.4.0",
+    "@ceramicnetwork/3id-did-resolver": "1.4.5-rc.0",
+    "@ceramicnetwork/stream-caip10-link": "1.1.7-rc.0",
+    "@ceramicstudio/idx": "^0.12.2",
+    "@ceramicstudio/idx-constants": "^1.0.0",
+    "@ceramicstudio/idx-tools": "0.11.0",
+    "@ceramicnetwork/common": "1.7.0-rc.0",
+    "@ceramicnetwork/http-client": "1.4.1-rc.0",
+    "@ceramicnetwork/blockchain-utils-linking": "1.3.0-rc.0",
+    "@ceramicnetwork/streamid": "1.3.1-rc.0",
+    "@ceramicnetwork/stream-tile": "1.3.3-rc.0",
+    "process": "^0.11.10",
+    "near-api-js": "^0.42.0",
+    "@ant-design/icons": "^4.6.2",
     "@download/blockies": "^1.0.3",
     "@emotion/react": "^11.4.0",
     "@headlessui/react": "^1.3.0",
@@ -73,12 +77,10 @@
     "cors": "^2.8.5",
     "dataverse-sdk": "./dataverse/sdk",
     "dayjs": "^1.10.6",
-    "dids": "^2.4.0",
     "ethers": "^5.4.4",
     "eventemitter3": "^4.0.7",
     "gsap": "^3.7.1",
     "isomorphic-fetch": "^3.0.0",
-    "key-did-resolver": "^1.2.1",
     "merge-images": "^2.0.0",
     "next": "11.x",
     "next-intl": "^1.4.4",
